# hyprscreen

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/: settings.local.json.tmp.2164.1f72b7017c2f
.claude/skills/verify/: SKILL.md
.github/workflows/: release.yml
docs/: architecture.md  product.md
docs/adr/: 0001-single-window-flow.md  0002-hud-separate-window.md  0003-hyprland-only.md  0004-stop-shortcut-validation.md  0005-gtk4-libadwaita.md  0006-repeat-last-action.md  0007-preview-back-clears-temp.md  0008-monitor-identifier-overlays.md  0009-cli-auto-trigger.md  0010-gif-export.md  0011-v2-visual-language.md  0012-capture-dock.md  0013-corner-thumbnail-autosave.md  0014-toast-feedback.md  0015-countdown-overlay.md  0016-segmented-pause.md  0017-recording-formats.md  0018-annotation-editor.md  0019-webcam-bubble.md  0020-draw-on-screen.md
docs/scopes/: capture.md  cli.md  config.md  hyprland.md  packaging.md  recording.md  ui.md
pkg/: PKGBUILD
src/: main.rs
src/app/: mod.rs
src/capture/: mod.rs  record.rs  screenshot.rs
src/cli/: mod.rs
src/config/: mod.rs
src/hyprland/: mod.rs
src/ui/: annotate.rs  cheatsheet.rs  countdown.rs  draw_overlay.rs  icons.rs  main_window.rs  mod.rs  thumbnail.rs  toast.rs  webcam.rs
