[package]
name = "hyprscreen"
version = "0.1.1"
edition = "2024"
description = "A first-class screenshot and screen-recording app built for Hyprland."
license = "MIT"
repository = "https://github.com/franlol/hyprscreen"
authors = ["franlol"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
glib = "0.20"
gtk = { version = "0.9", package = "gtk4" }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
