[package]
name = "hyprscreen"
version = "0.1.5"
edition = "2024"
description = "A first-class screenshot and screen-recording app built for Hyprland."
license = "MIT"
repository = "https://github.com/franlol/hyprscreen"
authors = ["franlol"]

[dependencies]
anyhow = "1.0"
cairo-rs = { version = "0.20", features = ["png"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
glib = "0.20"
gtk = { version = "0.9", package = "gtk4", features = ["v4_8"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
